<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_registerTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="30sp"
            android:text="@string/tv_register_tittle"
            android:textAlignment="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_avatarImage"
                android:layout_width="@dimen/avatarImage"
                android:layout_height="@dimen/avatarImage"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/NOT_FOUND"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/btn_takePicture"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_circle"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/NOT_FOUND"
                android:src="@drawable/ic_camera_alt_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatarImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.678"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_avatarImage"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/tbx_nameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:hint="@string/tbx_name"
            android:inputType="textPersonName"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/tbx_emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:hint="@string/tbx_email"
            android:inputType="textEmailAddress"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/tbx_telephoneRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:hint="@string/tbx_telephone"
            android:inputType="phone"
            tools:ignore="AutoFill" />

        <Button
            android:id="@+id/btn_submitRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="30sp"
            android:text="@string/register_btn" />
    </LinearLayout>
</FrameLayout>